# sagemcom2mqtt

./: .dockerignore  .gitignore  Dockerfile  README.md  anonymize.py  app.py  discover.py  modem.json  pyproject.toml  requirements.txt  test_app.py
.github/workflows/: docker-publish.yml
modems/: FAST3896.expected.json
src/sagemcom2mqtt/: __init__.py  anonymize.py  app.py  discover.py  parse_file.py
tests/: test_app.py
